# FancyTicTacToe_Win10

./: CMakeLists.txt  CMakePresets.json  FancyTicTacToe.cpp  FancyTicTacToe_Background.c
